# sqli-crawler

./: .gitignore  .prettierrc.yml  README.md  fetch-it-companies.sh  pyproject.toml  sites.txt
sqli_crawler/: __main__.py  color_log.py  crawler.py  termcolor.py  utils.py
sqli_crawler/assets/: send-all-forms.js  submit-forms.js
